[project]
name = "galacli"
version = "0.1.0"
description = "Library for testing galacticad binary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.7.1",
    "toml>=0.10.2",
    "tomlkit>=0.13.2",
]
