[project]
name = "galacli"
version = "0.1.0"
description = "Library for testing galacticad binary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mnemonic>=0.21",
    "pytest-md-report>=0.6.2",
    "pytest>=8.3.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.7.1",
    "toml>=0.10.2",
    "tomlkit>=0.13.2",
]

[tool.pytest.ini_options]
md_report_output = "report.md"
md_report = true
md_report_verbose = 1
md_report_color = "never"

# asyncio_mode = "auto"
# asyncio_default_fixture_loop_scope = "session"
